# origintrail-parachain

node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
tests/: README.md
